fix: allow native token authentication
